# SimpleGraphicsEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.md.old  boost-clear-all-windows.ps1  boost-multi-index-setup-windows.ps1  main.cpp  pch.h
Development/Logs/: README.md  TechnicalDebt.md
Development/Logs/May 2025/: 19 Mon  20 Tue
Development/Prompts/: InteractionTask.diff  InteractionTask.md  SelfAudit.md
Development/Scripts/: buildCatalogsTree.ps1  remove-submodule-windows.ps1
Documents/: CatalogsTree.txt  drafts
Engine/: Component.h  ComponentTypeReg.h  Core.h  Engine.cpp  Engine.h  ExplicitSingleton.h  Game.h  MultiIndex.h  Object.h  Scene.h  Subsystem.h  pch.h
Engine/Backends/: All.h
Engine/Components/: All.h  GraphicsComponent.h  KinematicsComponent.h  TransformComponent.h
Engine/Core/: CLIArguments.h
Engine/Scene/: Camera.h  Component.h  MultiIndex.h  Object.h  Scene.cpp  Scene.h
Engine/Scene/Components/: All.h  CollisionComponents.h  Component.h  GraphicsComponent.h  KinematicsComponent.h  TransformComponent.h
Engine/Scene/Events/: All.h  Event.h
Engine/Scene/Subsystems/: All.h  EventProcessingSubsystem.cpp  EventProcessingSubsystem.h  GraphicsSubsystem.cpp  GraphicsSubsystem.h  InputProcessingSubsystem.cpp  InputProcessingSubsystem.h  KinematicsSubsystem.cpp  KinematicsSubsystem.h  PhysicsSubsystem.cpp  PhysicsSubsystem.h  RaycastSubsystem.cpp  RaycastSubsystem.h  Subsystem.h
Engine/Subsystems/: All.h  GraphicsSubsystem.cpp  GraphicsSubsystem.h  KinematicsSubsystem.h
Engine/Windows/: MainWindow.cpp  MainWindow.h  Mouse.h
Logs/May 2025/: 19 Sun
